--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,16 @@
     <script src="https://cdn.socket.io/3.0.0/socket.io.js"></script>
     <script defer src="app.js"></script>
 </head>
+<link rel="stylesheet" href="style.css">
 
 <body>
-    <ul>
+    <div class="modal">
+        <ul>
 
-    </ul>
-    <input placeholder='type your message'>
-    <button>Send</button>
+        </ul>
+        <input placeholder='type your message' class="message_box">
+        <button class="btn">Send</button>
+    </div>
 </body>
 
 </html>
