--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <ul>
 
         </ul>
-        <input placeholder='type your message' class="message_box">
+        <input placeholder=' Type your message' class="message_box">
         <button class="btn">Send</button>
     </div>
 </body>
