--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
         </ul>
         <input placeholder=' Type your message' class="message_box">
         <button class="btn">Send</button>
+        <div class="btn_div"></div>
     </div>
 </body>
 
