--- a/app/index.html
+++ b/app/index.html
@@ -13,14 +13,15 @@
 
 <body>
     <div class="modal">
-
-        <ul>
+        <h1 class="head">Open a <a href="http://127.0.0.1:5500/app" target="_blank">New Tab</a> for live Chatting</h1>
+        <ul id="mssg">
 
         </ul>
-        <input placeholder=' Type your message' class="message_box">
-        <button class="btn">Send</button>
-        <div class="btn_div"></div>
-
+        <div class="shift">
+            <input placeholder=' Type your message' class="message_box" id="ip">
+            <button class="btn" value="Submit">Send</button>
+            <div class="btn_div"></div>
+        </div>
     </div>
 </body>
 
