--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,11 @@
 <body>
     <div class="modal">
         <h1 class="head">Open a <a href="http://127.0.0.1:5500/app" target="_blank">New Tab</a> for live Chatting</h1>
-        <ul id="mssg">
+        <div class="sc1">
+            <ul id="mssg">
 
-        </ul>
+            </ul>
+        </div>
         <div class="shift">
             <input placeholder=' Type your message' class="message_box" id="ip">
             <button class="btn" value="Submit">Send</button>
